--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
     }
     button:hover { background-color: #2980b9; }
     #preview {
-        max-width: 100px;
+        max-width: 120px;
         margin-top: 10px;
+        border-radius: 8px;
         display: none;
     }
     #qrcode { text-align: center; margin-top: 20px; }
@@ -113,9 +114,17 @@
     <label for="regNumber">Nº de Registro:</label>
     <input type="text" id="regNumber" readonly required>
 
+    <!-- FOTO COM OPÇÃO DE GALERIA E CÂMERA -->
     <label for="fileInput">Foto:</label>
-    <input type="file" accept="image/*" id="fileInput" required onchange="previewImage(event)">
-    <img id="preview">
+    <input 
+      type="file" 
+      accept="image/*" 
+      id="fileInput" 
+      required 
+      onchange="previewImage(event)" 
+      capture=""
+    >
+    <img id="preview" alt="Pré-visualização da foto">
 
     <label><input type="checkbox" id="dizimista"> Dizimista</label>
     <label><input type="checkbox" id="ebenezer"> Ebenezer</label>
@@ -135,7 +144,7 @@ const listId = '67891789508c1cc4f9ab7d59';
 const dizimistaLabelId = '67c777cb612091753a2b1c9c';
 const ebenezerLabelId = '67c777cb612091753a2b1c9d';
 
-// Pré-visualização da foto
+// 📸 Função da foto (pré-visualização + armazenamento)
 function previewImage(event) {
     const file = event.target.files[0];
     const preview = document.getElementById('preview');
@@ -147,10 +156,13 @@ function previewImage(event) {
         };
         reader.readAsDataURL(file);
         imageFile = file;
+    } else {
+        preview.style.display = "none";
+        imageFile = null;
     }
 }
 
-// Máscaras automáticas
+// 🧮 Máscaras
 document.getElementById('cpf').addEventListener('input', e => {
     let v = e.target.value.replace(/\D/g, "");
     v = v.replace(/(\d{3})(\d)/, "$1.$2");
@@ -172,70 +184,67 @@ document.getElementById('cep').addEventListener('input', e => {
     e.target.value = v;
 });
 
-// Busca automática do endereço via CEP (ViaCEP)
+// 🏠 Buscar endereço pelo CEP
 async function buscarCEP() {
     const cep = document.getElementById('cep').value.replace(/\D/g, '');
     if (cep.length !== 8) {
-        alert("⚠️ CEP inválido. Digite um CEP com 8 dígitos.");
+        alert("⚠️ CEP inválido.");
         return;
     }
     try {
-        const response = await fetch(`https://viacep.com.br/ws/${cep}/json/`);
-        const data = await response.json();
+        const res = await fetch(`https://viacep.com.br/ws/${cep}/json/`);
+        const data = await res.json();
         if (data.erro) {
             alert("❌ CEP não encontrado.");
-            document.getElementById('address').value = '';
             return;
         }
         document.getElementById('address').value = `${data.logradouro}, ${data.bairro}, ${data.localidade} - ${data.uf}`;
-    } catch (error) {
-        alert("❌ Erro ao buscar o CEP. Verifique sua conexão.");
+    } catch {
+        alert("❌ Erro ao buscar CEP.");
     }
 }
 
-// Validação de CPF
+// ✅ CPF
 function validarCPF(cpf) {
     cpf = cpf.replace(/\D/g, '');
     if (cpf.length !== 11 || /^(\d)\1+$/.test(cpf)) return false;
     let soma = 0, resto;
     for (let i = 1; i <= 9; i++) soma += parseInt(cpf.substring(i - 1, i)) * (11 - i);
     resto = (soma * 10) % 11;
-    if ((resto === 10) || (resto === 11)) resto = 0;
+    if (resto >= 10) resto = 0;
     if (resto !== parseInt(cpf.substring(9, 10))) return false;
     soma = 0;
     for (let i = 1; i <= 10; i++) soma += parseInt(cpf.substring(i - 1, i)) * (12 - i);
     resto = (soma * 10) % 11;
-    if ((resto === 10) || (resto === 11)) resto = 0;
+    if (resto >= 10) resto = 0;
     return resto === parseInt(cpf.substring(10, 11));
 }
 
-// Datas e número de registro
+// 🗓️ Datas e Registro
 function setDefaultDates() {
     const today = new Date().toISOString().split('T')[0];
     document.getElementById('issueDate').value = today;
-    const validityDate = new Date();
-    validityDate.setFullYear(validityDate.getFullYear() + 15);
-    document.getElementById('validityDate').value = validityDate.toISOString().split('T')[0];
+    const validity = new Date();
+    validity.setFullYear(validity.getFullYear() + 15);
+    document.getElementById('validityDate').value = validity.toISOString().split('T')[0];
     getTrelloCardCount();
 }
 
-function formatRegNumber(number) {
-    return number.toString().padStart(6, '0');
-}
+function formatRegNumber(num) { return num.toString().padStart(6, '0'); }
 
 async function getTrelloCardCount() {
     const url = `https://api.trello.com/1/lists/${listId}/cards?key=${apiKey}&token=${token}`;
-    const response = await fetch(url);
-    const data = await response.json();
+    const res = await fetch(url);
+    const data = await res.json();
     regNumberCounter = data.length + 1;
     document.getElementById('regNumber').value = formatRegNumber(regNumberCounter);
 }
 
-// Envio ao Trello
+// 🚀 Envio ao Trello
 async function sendToTrello() {
     const form = document.getElementById('idForm');
     if (!form.checkValidity()) {
-        alert("⚠️ Preencha todos os campos obrigatórios antes de salvar.");
+        alert("⚠️ Preencha todos os campos!");
         return;
     }
     if (!imageFile) {
@@ -244,10 +253,7 @@ async function sendToTrello() {
     }
 
     const cpf = document.getElementById('cpf').value;
-    if (!validarCPF(cpf)) {
-        alert("❌ CPF inválido. Verifique e tente novamente.");
-        return;
-    }
+    if (!validarCPF(cpf)) return alert("❌ CPF inválido!");
 
     const name = document.getElementById('name').value;
     const regNumber = document.getElementById('regNumber').value;
@@ -255,70 +261,54 @@ async function sendToTrello() {
     const desc = `
 **Nome:** ${name}
 **CPF:** ${cpf}
-**Data de Nascimento:** ${document.getElementById('dob').value}
 **Telefone:** ${document.getElementById('phone').value}
-**CEP:** ${document.getElementById('cep').value}
-**Endereço:** ${document.getElementById('address').value}
-**Batismo:** ${document.getElementById('baptismDate').value}
 **Função:** ${document.getElementById('position').value}
-**Pai:** ${document.getElementById('fatherName').value}
-**Mãe:** ${document.getElementById('motherName').value}
-**Emissão:** ${document.getElementById('issueDate').value}
-**Validade:** ${document.getElementById('validityDate').value}
 **Registro:** ${regNumber}
-**Dizimista:** ${document.getElementById('dizimista').checked ? 'Sim' : 'Não'}
-**Ebenezer:** ${document.getElementById('ebenezer').checked ? 'Sim' : 'Não'}
 `.trim();
 
     const labels = [];
     if (document.getElementById('dizimista').checked) labels.push(dizimistaLabelId);
     if (document.getElementById('ebenezer').checked) labels.push(ebenezerLabelId);
 
-    const formData = new FormData();
-    formData.append('name', `${regNumber} - ${name}`);
-    formData.append('desc', desc);
-    formData.append('idList', listId);
-    if (labels.length) formData.append('idLabels', labels.join(','));
-    formData.append('key', apiKey);
-    formData.append('token', token);
+    const fd = new FormData();
+    fd.append('name', `${regNumber} - ${name}`);
+    fd.append('desc', desc);
+    fd.append('idList', listId);
+    if (labels.length) fd.append('idLabels', labels.join(','));
+    fd.append('key', apiKey);
+    fd.append('token', token);
 
-    const response = await fetch('https://api.trello.com/1/cards', { method: 'POST', body: formData });
-    const card = await response.json();
-    const cardId = card.id;
+    const res = await fetch('https://api.trello.com/1/cards', { method: 'POST', body: fd });
+    const card = await res.json();
     const cardUrl = `https://trello.com/c/${card.shortLink}`;
 
+    // QR Code + download
     const qrDiv = document.getElementById('qrcode');
     qrDiv.innerHTML = "";
     new QRCode(qrDiv, { text: `${cardUrl}?reg=${regNumber}&cpf=${cpf.replace(/\D/g,'')}`, width: 200, height: 200 });
 
     setTimeout(async () => {
         const qrCanvas = qrDiv.querySelector('canvas');
-        const qrBlob = await new Promise(resolve => qrCanvas.toBlob(resolve, 'image/png'));
-
-        // 🟢 Faz o download automático do QR Code
+        const qrBlob = await new Promise(r => qrCanvas.toBlob(r, 'image/png'));
         const qrUrl = qrCanvas.toDataURL("image/png");
-        const link = document.createElement("a");
-        link.href = qrUrl;
-        link.download = `QR_${regNumber}.png`;
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
+        const a = document.createElement("a");
+        a.href = qrUrl;
+        a.download = `QR_${regNumber}.png`;
+        a.click();
 
-        // Upload da foto
         const imgData = new FormData();
         imgData.append('file', imageFile);
         imgData.append('key', apiKey);
         imgData.append('token', token);
-        await fetch(`https://api.trello.com/1/cards/${cardId}/attachments`, { method: 'POST', body: imgData });
+        await fetch(`https://api.trello.com/1/cards/${card.id}/attachments`, { method: 'POST', body: imgData });
 
-        // Upload do QR Code
-        const qrDataForm = new FormData();
-        qrDataForm.append('file', qrBlob, `QR_${regNumber}.png`);
-        qrDataForm.append('key', apiKey);
-        qrDataForm.append('token', token);
-        await fetch(`https://api.trello.com/1/cards/${cardId}/attachments`, { method: 'POST', body: qrDataForm });
+        const qrData = new FormData();
+        qrData.append('file', qrBlob, `QR_${regNumber}.png`);
+        qrData.append('key', apiKey);
+        qrData.append('token', token);
+        await fetch(`https://api.trello.com/1/cards/${card.id}/attachments`, { method: 'POST', body: qrData });
 
-        alert("✅ Cadastro completo enviado ao Trello e QR Code baixado automaticamente!");
+        alert("✅ Cadastro enviado e QR Code baixado!");
         clearForm();
     }, 800);
 }
